hdf5-derive/tests/compile-fail/enum-no-repr.stderr
error: proc-macro derive panicked
 --> $DIR/enum-no-repr.rs:4:10
  |
4 | #[derive(H5Type)]
  |          ^^^^^^
  |
  = help: message: H5Type can only be derived for enums with explicit representation
